--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
                 <i class="fa-sharp fa-solid fa-trophy"></i>
                 <h5>Snake Game</h5>
                 <div class="Paragrafo-card">
-                    <p>Projeto de aplicação de conhecimentos de Java
-                        Generation Brasil, onde desenvolvi um blog com todas
-                        as funcionalidade de postar, atualizar e deletar</p>
+                    <p>Projeto de aplicação de conhecimentos Java, desenvolvido para
+                        praticar os conceiros de POO. Aqui o classico jogo da cobrinha
+                    ganhou vida numa versão didatica.</p>
                     <a href="" class="acesso">ver +</a>
                 </div>
 
