--- a/index.html
+++ b/index.html
@@ -14,86 +14,108 @@
     <script src="https://kit.fontawesome.com/d5266206a6.js" crossorigin="anonymous"></script>
 
     <title>Portfolio website</title>
+
 </head>
 
 <body>
+
+
+
     <!---Cabeçalho-Main-->
 
     <div class="background">
 
+        <div class="flex-container Main ">
 
-        <div class="Main">
-            <h4>Oi, eu sou a </h4>
-            <h1>SABRINA <span> BARROS</span></h1>
-            <h3>DESENVOLVEDORA BACKEND JAVA</h3>
+            <div class="Main">
+                <h4>Oi, eu sou a </h4>
+                <h1>SABRINA <span> BARROS</span></h1>
+                <h3>DESENVOLVEDORA BACKEND JAVA</h3>
 
-            <div class="social text-left inline social-column-3 animated fadeInDown">
+                <div class="social text-left inline social-column-3 animated fadeInDown">
 
-                <a href="https://www.linkedin.com/in/sabrina-barsil/" target="_blank" class="linkedin hover-underline">
-                    <i class="fa-brands fa-linkedin"></i>
-                    <span class="social-text">Linkedin</span>
-                </a>
+                    <a href="https://www.linkedin.com/in/sabrina-barsil/" target="_blank"
+                        class="linkedin hover-underline">
+                        <i class="fa-brands fa-linkedin"></i>
+                        <span class="social-text">Linkedin</span>
+                    </a>
 
-                <a href="https://github.com/Sabrinabarsil" target="_blank" class="github hover-underline">
-                    <i class="fa-brands fa-github"></i>
-                    <span class="social-text">Github</span>
-                </a>
+                    <a href="https://github.com/Sabrinabarsil" target="_blank" class="github hover-underline">
+                        <i class="fa-brands fa-github"></i>
+                        <span class="social-text">Github</span>
+                    </a>
 
-                <a href="https://wa.me/5519994055207" target="_blank" class="whats hover-underline">
-                    <i class="fa-brands fa-whatsapp"></i>
-                    <span class="social-text">Whatsapp</span>
+                    <a href="https://wa.me/5519994055207" target="_blank" class="whats hover-underline">
+                        <i class="fa-brands fa-whatsapp"></i>
+                        <span class="social-text">Contato</span>
 
-                </a>
+                    </a>
 
+
+                </div>
 
             </div>
-
         </div>
 
-       
+
 
     </div>
     <section class="background-color-Sobre">
-        <div class="main-sobre">
-            <div class="Text-sobre">
-                <h2>
-                    < A DESENVOLVEDORA >
-                </h2>
-                <p> Sou uma equilibrista de demandas profissional. Mãe de 3 com um potencial sobre-humano para
-                    mediação de conflitos.
-                    Sou formada em relações internacionais pela FMU mas apesar da minha graduação 90% da minha
-                    vida profissional foi no setor comercial, trabalhando com maior protagonismo no varejo
-                    online, dedicando os
-                    últimos 7 anos aos marketplaces.
-                    De 2016 a 2021 gerenciei minha própria marca de ecobags atuando nas maiores plataformas de
-                    e-commerce e distribuindo
-                    nossas peças por todo Brasil.
-                    Comecei minha transição de carreira para a área tech em 2022 como consequência dos efeitos
-                    econômicos da pandemia no meu nicho de atuação. Nesse período descobri aptidões novas e
-                    interesses que jamais imaginei.
-                    Optei por desenvolver minhas habilidades como backend Java por sentir maior inclinação para
-                    a parte de infraestrutura.
-                    Atualmente, curso analise e desenvolvimento de sistemas na UNINTER e faço projetos autorais
-                    para praticar. </p>
+        <div class="flex-container main-sobre ">
+            <div class="main-sobre">
+                <div class="Text-sobre">
+                    <h2>
+                        < A DESENVOLVEDORA>
+                    </h2>
+                    <p> Estudante de Análise e Desenvolvimento de Sistemas, em transição de carreira com 10 anos de
+                        experiência
+                        na área comercial dos quais 6 foram a frente do meu negócio, fundado em 2016 no setor têxtil com
+                        foco no
+                        comercio online a Sublime Store atuou com maior protagonismo nas plataformas de marktplace
+                        distribuindo nossos produtos nacionalmente.
+                    </p>
 
-                <button>
-                    <div class="areaIcon">
-                        <i class="fa-solid fa-download"></i>
+                    <p> Em 2022 decidi transicionar para área de tecnologia e me aprofundei de forma autônoma sobre
+                        desenvolvimento de softwares,
+                        a ideia de construir aplicações web me fascinou de imediato por que percebi que não existe um
+                        absolutismo sobre as resoluções
+                        dos seus processos, ela abraça uma certa individualidade do desenvolvedor, dando margem para
+                        explorarmos caminhos alternativos
+                        de uma mesma situação.
+                    </p>
+
+                    <p>
+                        Minha inclinação é para o desenvolvimento Backend, tenho estudado a linguagem Java com framework
+                        Spring boot, banco de dados (SQL e NoSQL),
+                        testes unitários com JUnit, implementações com APIs REST, padrões de projeto, AWS,
+                        microserviços,
+                        metodologias ágeis (kanban).
+
+                    </p>
+
+                    <button>
+                        <div class="areaIcon">
+                            <i class="fa-solid fa-download"></i>
 
 
-                        <div class="download">
-                            <a href="curriculo/curriculo-sabrina-backend.pdf" download>DOWNLOAD CV</a>
-                            </a>
+                            <div class="download">
+                                <a href="/curriculo/Sabrina- Backend Java - estagio.pdf" download>DOWNLOAD CV</a>
+                                </a>
 
+                            </div>
                         </div>
-                    </div>
 
-                </button>
+                    </button>
 
+                </div>
             </div>
         </div>
 
+
     </section>
+
+
+
     <div class="container-projetos">
         <div class="title">
             <h2>PROJETOS</h2>
