--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     <p>Projeto de conclusão de modulo elaborado no bootcamp
                         Generation Brasil, onde desenvolvi um blog com todas
                         as funcionalidade de postar, atualizar e deletar</p>
-                    <a href="https://github.com/Sabrinabarsil/Blog-Pessoal---Deploy" class="acesso">ver +</a>
+                    <a href="https://blogbarsil.netlify.app/" class="acesso">ver +</a>
                 </div>
 
             </div>
@@ -155,6 +155,8 @@
                     ganhou vida numa versão didatica.</p>
                     <a href="" class="acesso">ver +</a>
                 </div>
+
+                
 
             </div>
         </div>
