--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     <p>Projeto de aplicação de conhecimentos Java, desenvolvido para
                         praticar os conceiros de POO. Aqui o classico jogo da cobrinha
                     ganhou vida numa versão didatica.</p>
-                    <a href="" class="acesso">ver +</a>
+                    <a href="https://github.com/Sabrinabarsil/SnakeGame" class="acesso">ver +</a>
                 </div>
 
                 
